# pytest-snap

./: LICENSE  README.md  pyproject.toml
src/pytest_snap/: __init__.py  plugin.py  round.py
tests/: test_e2e.py  test_round.py
